--- a/src/WeatherApp.css
+++ b/src/WeatherApp.css
@@ -5,10 +5,9 @@
    height: 60vh;
    width: 25%;
    margin: auto;
-   padding: 50px 30px 5px 30px;
+   padding: 50px 30px 0px 30px;
    min-width: 300px;
    border-radius: 15px;
-   
 }
 
 .search-bar {
@@ -45,4 +44,16 @@
    border-radius: 10px;
    margin-left: auto;
    margin-right: auto;
+}
+
+.weather-details {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   gap: 40px;
+}
+.weather-details p{
+   font-size: large;
+   color : black;
+   font-weight: bolder;
 }
